feat: Swegger adicionado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+spring.datasource.url= jdbc:postgresql://localhost:5432/tweets
+spring.datasource.username=postgres
+spring.datasource.password=1441
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Atualiza as tabelas conforme mudamos coisas na API
+spring.jpa.hibernate.ddl-auto=update 
+
+# Evita conflitos de metadados criados pelo Hibernate (ORM)
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
